--- a/lab00-git.Rmd
+++ b/lab00-git.Rmd
@@ -67,8 +67,7 @@ denote the work that will happen here.
 1. Now open `lab00-git.Rmd`. You'll see all the instructions you've been 
 looking at there in that document.
 1. Try to click `Knit` or use `Cmd+Shift+K` (`Ctrl+Shift+K` on Windows/Linux). 
-To render the lab to `.pdf`. You should always do this first to make sure 
-everything works.
+To render the lab to `.pdf`. 
 1. On the previous line, Delete the last sentence "You should always do this 
 first...". And Save.
 1. Now, looking in the Git panel, you should see `lab00-git.Rmd` and 
